--- a/WebSpa/WebSpa.csproj
+++ b/WebSpa/WebSpa.csproj
@@ -68,23 +68,23 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Web.config" />
-    <Content Include="WebAdmin.aspx" />
-    <Content Include="WebUser.aspx" />
+    <Content Include="admin\home\WebAdmin.aspx" />
+    <Content Include="user\home\WebUser.aspx" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="WebAdmin.aspx.cs">
+    <Compile Include="admin\home\WebAdmin.aspx.cs">
       <DependentUpon>WebAdmin.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="WebAdmin.aspx.designer.cs">
+    <Compile Include="admin\home\WebAdmin.aspx.designer.cs">
       <DependentUpon>WebAdmin.aspx</DependentUpon>
     </Compile>
-    <Compile Include="WebUser.aspx.cs">
+    <Compile Include="user\home\WebUser.aspx.cs">
       <DependentUpon>WebUser.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="WebUser.aspx.designer.cs">
+    <Compile Include="user\home\WebUser.aspx.designer.cs">
       <DependentUpon>WebUser.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
@@ -96,6 +96,16 @@
     <None Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="admin\login\" />
+    <Folder Include="admin\products\" />
+    <Folder Include="admin\schedule\" />
+    <Folder Include="admin\service\" />
+    <Folder Include="user\login\" />
+    <Folder Include="user\products\" />
+    <Folder Include="user\schedule\" />
+    <Folder Include="user\service\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
