--- a/WebSpa/WebSpa.csproj
+++ b/WebSpa/WebSpa.csproj
@@ -44,13 +44,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="DAL, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\DAL\bin\Debug\DAL.dll</HintPath>
-    </Reference>
-    <Reference Include="EntityFramework">
-      <HintPath>..\DAL\bin\Debug\EntityFramework.dll</HintPath>
-    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
@@ -75,21 +68,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="CSS\grid.css" />
-    <Content Include="CSS\layout.css" />
-    <Content Include="CSS\productLoad.css" />
-    <Content Include="user\contact\contact.aspx" />
+    <Content Include="user\css\base.css" />
+    <Content Include="user\css\grid.css" />
+    <Content Include="user\css\layout.css" />
+    <Content Include="user\css\style.css" />
     <Content Include="user\home\Home.aspx" />
-    <Content Include="resource\ImageProduct\eucerin-Kem-CKĐ-eucerin-e1544608223981-500x500.jpg" />
-    <Content Include="resource\ImageProduct\eucerin-Kem-đặc-tri-mụn-e1544607546343-500x500.png" />
-    <Content Include="resource\ImageProduct\eucerin-Kiểm-soát-nhờn-e1544608643841-500x500.jpg" />
-    <Content Include="resource\ImageProduct\Eucerin-Nước-hoa-hồng-e1544671167538-500x500.jpg" />
-    <Content Include="resource\ImageProduct\Eucerin-tinh-chất-trị-mụn-e1544673241822-500x500.jpg" />
-    <Content Include="resource\ImageProduct\Eucerin-TTBC-e1544672702328-500x500.jpg" />
-    <Content Include="resource\ImageProduct\kem-chong-nang-e1544608368933-500x500.png" />
-    <Content Include="resource\ImageProduct\SRM-Eucerin-1-1-e1544607859868-500x500.jpg" />
-    <Content Include="user\products\SanPhamList.aspx" />
-
     <Content Include="Web.config" />
     <Content Include="admin\home\WebAdmin.aspx" />
     <Content Include="user\home\WebUser.aspx" />
@@ -104,20 +87,12 @@
     <Compile Include="admin\home\WebAdmin.aspx.designer.cs">
       <DependentUpon>WebAdmin.aspx</DependentUpon>
     </Compile>
-    <Compile Include="user\contact\contact.aspx.cs">
-      <DependentUpon>contact.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="user\contact\contact.aspx.designer.cs">
-      <DependentUpon>contact.aspx</DependentUpon>
-    </Compile>
     <Compile Include="user\home\Home.aspx.cs">
       <DependentUpon>Home.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="user\home\Home.aspx.designer.cs">
       <DependentUpon>Home.aspx</DependentUpon>
-
     </Compile>
     <Compile Include="user\home\WebUser.aspx.cs">
       <DependentUpon>WebUser.aspx</DependentUpon>
@@ -126,7 +101,6 @@
     <Compile Include="user\home\WebUser.aspx.designer.cs">
       <DependentUpon>WebUser.aspx</DependentUpon>
     </Compile>
-
     <Compile Include="user\MasterPage.Master.cs">
       <DependentUpon>MasterPage.Master</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -140,14 +114,6 @@
     </Compile>
     <Compile Include="WebForm1.aspx.designer.cs">
       <DependentUpon>WebForm1.aspx</DependentUpon>
-    </Compile>
-
-    <Compile Include="user\products\SanPhamList.aspx.cs">
-      <DependentUpon>SanPhamList.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="user\products\SanPhamList.aspx.designer.cs">
-      <DependentUpon>SanPhamList.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
