--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -48,6 +48,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CartItem.cs">
+      <DependentUpon>SpaModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="CHI_NHANH.cs">
       <DependentUpon>SpaModel.tt</DependentUpon>
     </Compile>
