--- a/SpaWeb/SpaWeb.csproj
+++ b/SpaWeb/SpaWeb.csproj
@@ -106,6 +106,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="About.aspx" />
+    <Content Include="Admin\Product\AddSanPham.aspx" />
+    <Content Include="Admin\Product\EditSamPham.aspx" />
+    <Content Include="Admin\Product\SanPhamLoad.aspx" />
     <Content Include="Contact.aspx" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
@@ -127,6 +130,7 @@
     <Content Include="Content\bootstrap-theme.min.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
+    <Content Include="Resource\image\download.jpg" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
@@ -156,13 +160,40 @@
     <Content Include="Scripts\WebForms\WebParts.js" />
     <Content Include="Scripts\WebForms\WebUIValidation.js" />
     <Content Include="Site.Master" />
+
     <Content Include="User\Contact\contact.aspx" />
+
+    <Content Include="User\Product\GioHang.aspx" />
+    <Content Include="User\Product\SanPhamDetail.aspx" />
+    <Content Include="User\Product\SanPhamListLoad.aspx" />
+
     <Content Include="ViewSwitcher.ascx" />
     <Content Include="Web.config" />
     <Content Include="Bundle.config" />
     <Content Include="Site.Mobile.Master" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Admin\Product\AddSanPham.aspx.cs">
+      <DependentUpon>AddSanPham.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Admin\Product\AddSanPham.aspx.designer.cs">
+      <DependentUpon>AddSanPham.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Admin\Product\EditSamPham.aspx.cs">
+      <DependentUpon>EditSamPham.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Admin\Product\EditSamPham.aspx.designer.cs">
+      <DependentUpon>EditSamPham.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Admin\Product\SanPhamLoad.aspx.cs">
+      <DependentUpon>SanPhamLoad.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Admin\Product\SanPhamLoad.aspx.designer.cs">
+      <DependentUpon>SanPhamLoad.aspx</DependentUpon>
+    </Compile>
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="About.aspx.cs">
       <DependentUpon>About.aspx</DependentUpon>
@@ -204,12 +235,35 @@
     <Compile Include="Site.Mobile.Master.designer.cs">
       <DependentUpon>Site.Mobile.Master</DependentUpon>
     </Compile>
+
     <Compile Include="User\Contact\contact.aspx.cs">
       <DependentUpon>contact.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="User\Contact\contact.aspx.designer.cs">
       <DependentUpon>contact.aspx</DependentUpon>
+
+    <Compile Include="User\Product\GioHang.aspx.cs">
+      <DependentUpon>GioHang.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="User\Product\GioHang.aspx.designer.cs">
+      <DependentUpon>GioHang.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="User\Product\SanPhamDetail.aspx.cs">
+      <DependentUpon>SanPhamDetail.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="User\Product\SanPhamDetail.aspx.designer.cs">
+      <DependentUpon>SanPhamDetail.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="User\Product\SanPhamListLoad.aspx.cs">
+      <DependentUpon>SanPhamListLoad.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="User\Product\SanPhamListLoad.aspx.designer.cs">
+      <DependentUpon>SanPhamListLoad.aspx</DependentUpon>
+
     </Compile>
     <Compile Include="ViewSwitcher.ascx.cs">
       <DependentUpon>ViewSwitcher.ascx</DependentUpon>
@@ -233,6 +287,12 @@
     <None Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DAL\DAL.csproj">
+      <Project>{BE7DABEB-DF86-47C5-A272-52DEA560A548}</Project>
+      <Name>DAL</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
