--- a/SpaWeb/Web.config
+++ b/SpaWeb/Web.config
@@ -42,4 +42,8 @@
         warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
     </compilers>
   </system.codedom>
+  <connectionStrings>
+    <add name="DB_SPAEntities" connectionString="metadata=res://*/SpaModel.csdl|res://*/SpaModel.ssdl|res://*/SpaModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SHENLONG-PC\SQLEXPRESS;initial catalog=DB_SPA;persist security info=True;user id=sa;password=sa2012;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
+
 </configuration>
